--- a/ui/css/style.css
+++ b/ui/css/style.css
@@ -1,11 +1,13 @@
 *{margin: 0;}
 
 .header {
-    background: #57a958;
+    display:flex;
+    justify-content:start;
+    align-items: center;
+    gap:10px;
     text-align: left;
     font-size: 20px;
     font-weight: bold;
-    color: white;
     padding: 4px;
     font-family: sans-serif;
 }
@@ -22,25 +24,19 @@
     border: 1px solid gray;
 }
 
-#editor { height: 400px; }
+#editor { height: 80%; }
 
 .button-container {
-    text-align: right;
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    gap:10px;
     padding: 4px;
 }
 
-.btn {
-    background: #57a958;
-    color: white;
-    padding: 8px;
-    border: 0;
+.not-loading{
+    display:none;
 }
-
-.output {
-        padding: 4px;
-        border: 2px solid gray;
-        min-height: 100px;
-        width: 99%;
-        resize: none;
-
+.loading{
+    display:block;
 }
